feat: Thai for top 50 countries

--- a/countries.yml
+++ b/countries.yml
@@ -3,115 +3,115 @@
 locale: th-TH
 translations:
   - key: options.country.AFG
-    t: Afghanistan
+    t: อัฟกานิสถาน
   - key: options.country.DZA
-    t: Algeria
+    t: แอลจีเรีย
   - key: options.country.ARG
-    t: Argentina
+    t: อาร์เจนตินา
   - key: options.country.AUS
-    t: Australia
+    t: ออสเตรเลีย
   - key: options.country.AUT
-    t: Austria
+    t: ออสเตรีย
   - key: options.country.BGD
-    t: Bangladesh
+    t: บังกลาเทศ
   - key: options.country.BEL
-    t: Belgium
+    t: เบลเยียม
   - key: options.country.BLR
-    t: Belarus
+    t: เบลารุส
   - key: options.country.BRA
-    t: Brazil
+    t: บราซิล
   - key: options.country.CAN
-    t: Canada
+    t: แคนาดา
   - key: options.country.CHE
-    t: Switzerland
+    t: สวิตเซอร์แลนด์
   - key: options.country.CHL
-    t: Chile
+    t: ชิลี
   - key: options.country.CHN
-    t: China
+    t: จีน
   - key: options.country.COD
-    t: DR Congo
+    t: สาธารณรัฐประชาธิปไตยคองโก
   - key: options.country.COL
-    t: Colombia
+    t: โคลอมเบีย
   - key: options.country.CIV
-    t: Côte d'Ivoire
+    t: โกตดิวัวร์ (ไอวอรี่โคสต์)
   - key: options.country.CZE
-    t: Czechia
+    t: เช็กเกีย
   - key: options.country.DNK
-    t: Denmark
+    t: เดนมาร์ก
   - key: options.country.EGY
-    t: Egypt
+    t: อียิปต์
   - key: options.country.ETH
-    t: Ethiopia
+    t: เอธิโอเปีย
   - key: options.country.FRA
-    t: France
+    t: ฝรั่งเศส
   - key: options.country.DEU
-    t: Germany
+    t: เยอรมนี
   - key: options.country.GHA
-    t: Ghana
+    t: กานา
   - key: options.country.GBR
-    t: United Kingdom
+    t: สหราชอาณาจักร
   - key: options.country.IND
-    t: India
+    t: อินเดีย
   - key: options.country.IDN
-    t: Indonesia
+    t: อินโดนีเซีย
   - key: options.country.IRN
-    t: Iran
+    t: อิหร่าน
   - key: options.country.IRQ
-    t: Iraq
+    t: อิรัก
   - key: options.country.ITA
-    t: Italy
+    t: อิตาลี
   - key: options.country.ISR
-    t: Israel
+    t: อิสราเอล
   - key: options.country.JPN
-    t: Japan
+    t: ญี่ปุ่น
   - key: options.country.KEN
-    t: Kenya
+    t: เคนยา
   - key: options.country.KOR
-    t: South Korea
+    t: เกาหลีใต้
   - key: options.country.MEX
-    t: Mexico
+    t: เม็กซิโก
   - key: options.country.MMR
-    t: Myanmar
+    t: เมียนมา
   - key: options.country.NOR
-    t: Norway
+    t: นอร์เวย์
   - key: options.country.NLD
-    t: Netherlands
+    t: เนเธอร์แลนด์
   - key: options.country.NGA
-    t: Nigeria
+    t: ไนจีเรีย
   - key: options.country.NZL
-    t: New Zealand
+    t: นิวซีแลนด์
   - key: options.country.POL
-    t: Poland
+    t: โปแลนด์
   - key: options.country.PAK
-    t: Pakistan
+    t: ปากีสถาน
   - key: options.country.PHL
-    t: Philippines
+    t: ฟิลิปปินส์
   - key: options.country.RUS
-    t: Russia
+    t: รัสเซีย
   - key: options.country.SAU
-    t: Saudi Arabia
+    t: ซาอุดีอาระเบีย
   - key: options.country.SGP
-    t: Singapore
+    t: สิงคโปร์
   - key: options.country.ZAF
-    t: South Africa
+    t: แอฟริกาใต้
   - key: options.country.ESP
-    t: Spain
+    t: สเปน
   - key: options.country.SWE
-    t: Sweden
+    t: สวีเดน
   - key: options.country.TZA
-    t: Tanzania
+    t: แทนซาเนีย
   - key: options.country.THA
-    t: Thailand
+    t: ไทย
   - key: options.country.TUR
-    t: Turkey
+    t: ตุรกี
   - key: options.country.UGA
-    t: Uganda
+    t: ยูกันดา
   - key: options.country.UKR
-    t: Ukraine
+    t: ยูเครน
   - key: options.country.USA
-    t: United States of America
+    t: สหรัฐอเมริกา
   - key: options.country.VNM
-    t: Vietnam
+    t: เวียดนาม
 # from https://github.com/lukes/ISO-3166-Countries-with-Regional-Codes/blob/master/slim-3/slim-3.json
 
 # - name: Afghanistan
